dataset1235/2025-2/2318198438/users/473799190/executions/2601575092_1467685783.log
== SUBMISSION (2025-08-14 00:22:14)
-- CODE: 
print (total(20*35) )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total(20*35) )
           ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total(20*35) )
           ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:22:10)
-- CODE: 
print (total(=20*35) )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print (total(=20*35) )
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    print (total(=20*35) )
                 ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:22:58)
-- CODE: 
print (20*35 )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:17:30)
-- CODE: 
print (total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total )
           ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total )
           ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:22:16)
-- CODE: 
print (total(20*35) )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total(20*35) )
           ^^^^^
NameError: name 'total' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total(20*35) )
           ^^^^^
NameError: name 'total' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:21:48)
-- CODE: 
print (total = 20*35 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total = 20*35 )
TypeError: 'total' is an invalid keyword argument for print()
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (total = 20*35 )
TypeError: 'total' is an invalid keyword argument for print()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
